# driver_workflow

./: .gitignore  Cargo.toml  Components.toml  README.md
.claude/workflow/: linux-driver-to-asterinas-v1.js  linux-driver-to-asterinas-v2.js  linux-driver-to-asterinas.js
e1000-generated/: REVIEW-correctness.md  REVIEW-integration.md
e1000-generated/src/: buffer.rs  desc.rs  device.rs  driver.rs  hw.rs  lib.rs  regs.rs
kernel/: Cargo.toml
kernel/comps/e1000/: Cargo.toml  REVIEW-correctness.md  REVIEW-integration.md
kernel/comps/e1000/src/: desc.rs  driver.rs  eeprom.rs  hw.rs  intr.rs  lib.rs  phy.rs  regs.rs  rx.rs  tx.rs
kernel/comps/e1000e/: Cargo.toml  REVIEW-integration.md
kernel/comps/e1000e/src/: desc.rs  driver.rs  lib.rs  mac.rs  nvm.rs  phy.rs  regs.rs  rx.rs  tx.rs
kernel/comps/r8169/: Cargo.toml  REVIEW-correctness.md  REVIEW-integration.md
kernel/comps/r8169/src/: desc.rs  device.rs  lib.rs  phy.rs  regs.rs  rx.rs  tx.rs
kernel/src/net/iface/: init.rs  mod.rs
kernel/src/net/socket/ip/: common.rs
test/initramfs/src/: test_e1000_net.sh
tools/: qemu_args.sh
