[package]
name = "aster-e1000"
version = "0.1.0"
edition.workspace = true

[dependencies]
aster-bigtcp.workspace = true
aster-network.workspace = true
aster-pci.workspace = true
aster-softirq.workspace = true
bitflags.workspace = true
component.workspace = true
ostd.workspace = true
ostd-pod.workspace = true
spin.workspace = true
zerocopy.workspace = true

[lints]
workspace = true
