[package]
name = "aster-r8169"
version = "0.1.0"
edition.workspace = true

[dependencies]
aster-bigtcp.workspace = true
aster-network.workspace = true
aster-pci.workspace = true
aster-softirq.workspace = true
component.workspace = true
log.workspace = true
ostd.workspace = true
spin.workspace = true

[lints]
workspace = true
